test(fixture): strengthen scenario contracts